# otus-cpp-basics_odin

./: CMakeLists.txt  README.md  add_the_entry.cpp  check_value.h  djf  error_check.cpp  error_check.h  generate_number.cpp  guess_the_number.cpp  high_scores.txt  print_the_list.cpp  print_the_list.h
example1/: CMakeLists.txt
example2/: CMakeLists.txt  add_the_entry.cpp  add_the_entry.h  check_value.cpp  generate_number.cpp  generate_number.h  guess_the_number.cpp  high_scores.txt
